--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 			<input class="cajita" type="number" name="valor1" value=""/>
 			<br/>
 			<br/>
-			<label class="pedir">Introduce el porcentaje :</label>
+			<label class="pedir">Introduce el porcentaje:</label>
 			<br/>
 			<input class="cajita" type="number" name="valor2" value=""/>
 			<br/>
 			<input class="botoncito" type="button" value="Calcular" onclick="calcular()">
+      <input class="botoncito" type="button" value="Limpiar" onclick="limpiar()">
 		</form>
 		<div name="resultados">
 			<h3 id="r1"></h3>
